--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,61 @@
-/* Libs */
-@import url(../../assets/scss/vendor/bootstrap/bootstrap.min.css);
+/**
+ *  Leap Learn
+ * ----------------------
+ * GNU GPLv3 License (c) - 2014
+ *
+ * @link http://www.github.com/learnlab
+ * @copyright GNU GPLv3 License, http://gnu.org/copyleft/gpl.html
+ * @author Jesus Garcia <ctw@ctwhome.com> 25/07/14, 22:35.
+ *
+ * Styles css
+ * ---------------------
+ */
+/* VENDOR - Default fall-backs and external files.
+========================================================================== */
+@import url(../../assets/js/bower_components/bootstrap/dist/css/bootstrap.min.css);
+@import url(../../assets/css/bootstrap.min.css);
+/* BASE - Base Variable file along with starting point Mixins and Placeholders.
+========================================================================== */
+/* FRAMEWORK - Structure and layout files.
+========================================================================== */
+.jumbotron {
+  background-color: rgba(238, 238, 238, 0.8);
+  position: relative;
+  transform: translateY(40%); }
+
+video#bgvid {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  background: url(polina.jpg) no-repeat;
+  background-size: cover; }
+
+.help .thumbnail {
+  position: relative;
+  padding: 0px;
+  margin-bottom: 20px; }
+.help .thumbnail img {
+  width: 100%; }
+
+/* MODULES - Re-usable site elements.
+========================================================================== */
+.hide {
+  display: none !important; }
+
+.transparent-background {
+  background-color: rgba(238, 238, 238, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.back {
+  position: fixed;
+  top: 20px;
+  left: 20px; }
