--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,7 +16,7 @@
 //@import 'vendor/normalize';
 //@import 'vendor/simplegrid';                  // Documentation: http://thisisdallas.github.io/Simple-Grid/
 //@import 'vendor/animate';                     // Documentation: http://daneden.github.io/animate.css/
-@import '../../assets/scss/vendor/bootstrap/bootstrap.min.css';
+//@import '../../assets/scss/vendor/bootstrap/bootstrap.min.css';
 
 /* BASE - Base Variable file along with starting point Mixins and Placeholders.
 ========================================================================== */
