--- a/assets/scss/framework/_main.scss
+++ b/assets/scss/framework/_main.scss
@@ -1,8 +1,6 @@
-body{
-    width: 1024px;
-    height: 768px;
-    margin: 0 auto;
-    display: block;
-    border: 1px #e7e7e7 solid;
-    position: relative;
+$green-leap: #B3CE24;
+
+
+.hide {
+    display: none;
 }
