--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -32,3 +32,5 @@
 
 /* MODULES - Re-usable site elements.
 ========================================================================== */
+//Painting module
+@import 'framework/modules/paint';
