--- a/assets/scss/framework/pages/_index.scss
+++ b/assets/scss/framework/pages/_index.scss
@@ -1,4 +1,17 @@
 .index-page{
+
+    width: 1024px;
+    height: 768px;
+    margin: 0 auto;
+    display: block;
+
+    border: 1px solid rgba(255, 255, 255, .1);
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+
+    position: relative;
+
+
     #postionfinger{
         position: absolute;
     }
