--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,6 +14,7 @@
 /* VENDOR - Default fall-backs and external files.
 ========================================================================== */
 @import '../../assets/js/bower_components/bootstrap/dist/css/bootstrap.min.css';
+@import 'yeti.min.css';     // Bootstrap template
 @import 'animate.css';
 
 
