--- a/assets/scss/framework/pages/_home.scss
+++ b/assets/scss/framework/pages/_home.scss
@@ -1,63 +1,130 @@
-.home-page{
-    body {
-        font-family: Helvetica;
+$background-color-box: rgba(200, 200, 200, 0.5);
+$blue: rgba( 0, 81, 122, 0.9);
 
+.home-page {
+    /* Space for the hands  */
+    canvas {
+        z-index: -10;
     }
 
-    .img-detect{
+    .img-detect {
         position: fixed;
         top: 20%;
         left: 30%;
     }
-
-    /* Space for the hands  */
-//    canvas {
-//        position: fixed;
-//        width: 100%;
-//        height: 100%;
-//        top: 0;
-//        left: 0;
-//    }
-
-
-
-    /* FIXME FOR WHAT IS THIS????*/
-    #debugger {
-        top: 0;
-        left: 0;
+    svg#countdown {
         position: fixed;
-        background: black;
-        color: #eee;
-        padding: 4px;
-        display: none;
-    }
-    #notification-square{
-        width: 200px;
-        height: 50px;
+        top: 15%;
+        left: 37%;
+
         display: block;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        border: 1px solid #000000;
+        margin: 50px auto;
+    }
+    #loader { fill: $background-color-box }
+    #border { fill: $blue }
 
-        .ball{
-            width: 10px;
-            height: 10px;
-            display: block;
-            position: absolute;
-            bottom: 0px;
-            left: 95%;
-            padding-left: 10px;
-            background-color: darkblue;
+    aside.left{
+        width: 300px;padding: 10px;
+
+        #name-gesture{
+            width: 156px;
+            height: 36px;
+            border: 1 solid rgb(205, 205, 205);
+            vertical-align: -1px;
         }
-
-        &.gesture{
-            background-color: $green-leap;
-            .ball{
-                background-color: red;
+        ul.gesture-list{
+            padding: 10px;
+            margin-left: -9px;
+            list-style: none;
+            li{
+                background-color: $background-color-box;
+                padding: 5px 10px;
+                span.accurace{
+                    float: right;
+                }
+                &:hover{
+                    background-color: darken($background-color-box, 10%);
+                    cursor: pointer;
+                }
+                &.readed{
+                    color: $blue;
+                }
             }
         }
-
-
     }
+    aside.right {
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 250px;
+        padding: 10px 0px;
+
+        #notification-square {
+            background-color: $background-color-box;
+            position: relative;
+            width: 215px;
+            height: 50px;
+            display: inline-block;
+            margin-bottom: 10px;
+            margin-left: 10px;
+            .ball-l, .ball-r {
+                display: block;
+                position: absolute;
+                width: 20%;
+                height: 10px;
+                bottom: 0px;
+            }
+            .ball-l{
+                float: left;
+                background-color: lightgray;
+                left: 50%;
+            }
+            .ball-r{
+                float: right;
+                background-color: lightgray;
+                right: 50%;
+
+            }
+
+            &.gesture {
+                //background-color: $green-leap;
+                .ball {
+                    //background-color: red;
+                }
+            }
+        }
+        #info {
+            background: {
+                color: $background-color-box;
+            }
+            width: 215px;
+            height: 50px;
+            display: inline-block;
+            margin-bottom: 10px;
+            margin-left: 10px;
+            padding: 10px;
+        }
+
+        .square3d {
+            background: {
+                color: $background-color-box;
+            }
+            display: inline-block;
+            width: 100px;
+            height: 100px;
+            margin: 0 0 10px 10px;
+
+        }
+    }
+
+    #deb-stats {
+        color: #b4b4b4; // Color text
+        width: 100%;
+        height: auto;
+        position: absolute;
+        bottom: 0;
+        padding: 10px;
+    }
+
 }
