--- a/assets/scss/framework/pages/_home.scss
+++ b/assets/scss/framework/pages/_home.scss
@@ -1,5 +1,6 @@
 $background-color-box: rgba(200, 200, 200, 0.5);
 $blue: rgba( 0, 81, 122, 0.9);
+$green: rgba(39, 174, 97, 0.9);
 
 .home-page {
     /* Space for the hands  */
@@ -16,7 +17,6 @@ $blue: rgba( 0, 81, 122, 0.9);
         position: fixed;
         top: 15%;
         left: 37%;
-
         display: block;
         margin: 50px auto;
     }
@@ -24,8 +24,8 @@ $blue: rgba( 0, 81, 122, 0.9);
     #border { fill: $blue }
 
     aside.left{
-        width: 300px;padding: 10px;
-
+        width: 300px;
+        padding: 10px;
         #name-gesture{
             width: 156px;
             height: 36px;
@@ -37,13 +37,22 @@ $blue: rgba( 0, 81, 122, 0.9);
             margin-left: -9px;
             list-style: none;
             li{
+                -webkit-transition: all .2s ease-in-out;
+                -moz-transition: all .2s ease-in-out;
+                -o-transition: all .2s ease-in-out;
+                transition: all .2s ease-in-out;
+
+                &.winner{
+                    background-color: $green;
+                    color: white;
+                }
                 background-color: $background-color-box;
                 padding: 5px 10px;
-                span.accurace{
+                span.score{
                     float: right;
                 }
                 &:hover{
-                    background-color: darken($background-color-box, 10%);
+                    background-color: darken($background-color-box, 20%);
                     cursor: pointer;
                 }
                 &.readed{
@@ -126,5 +135,4 @@ $blue: rgba( 0, 81, 122, 0.9);
         bottom: 0;
         padding: 10px;
     }
-
 }
