--- a/app/assets/scss/framework/_main.scss
+++ b/app/assets/scss/framework/_main.scss
@@ -1,4 +1,8 @@
 $green-leap: #B3CE24;
+$background-color-box: rgba(200, 200, 200, 0.5);
+$blue: #008CBA;
+$green: rgba(39, 174, 97, 0.9);
+$dark-gray: rgb(123, 123, 123);
 
 
 .hide {
