--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -37,3 +37,5 @@
 ========================================================================== */
 //Painting module
 @import 'framework/modules/paint';
+@import 'framework/modules/tabs';
+@import 'framework/modules/slider';
