--- a/app/assets/scss/framework/pages/_home.scss
+++ b/app/assets/scss/framework/pages/_home.scss
@@ -1,14 +1,21 @@
-$background-color-box: rgba(200, 200, 200, 0.5);
-$blue: rgba( 0, 81, 122, 0.9);
-$green: rgba(39, 174, 97, 0.9);
-$dark-gray: rgb(123, 123, 123);
-
-/*FIXME*/
+/**
+ * LeapLearn. by Jesus García
+ * ----------------------------------------------------------------
+ * Copyright (c) 2014 Universidad Carlos III de Madrid
+ *
+ * @link http://www.ctwhome.com/leaplearn
+ * @copyright 2014 Jesus García
+ * @date 20/10/14, 12:50.
+ *
+ * Home Styles
+ * ---------------------
+ */
 .playback-move-hand {display: none}
 
 .home-page {
     /* Space for the hands  */
-    canvas {
+    >canvas {
+      background-color: #fff;
         z-index: -10;
     }
 
@@ -36,11 +43,24 @@ $dark-gray: rgb(123, 123, 123);
             border: 1 solid rgb(205, 205, 205);
             vertical-align: -1px;
         }
+        .extra-buttons{
+          .btn {
+            background-color: white;
+            .glyphicon{color: #9b9b9b
+            }
+          }
+        }
         ul.gesture-list{
             padding: 10px;
             margin-left: -9px;
             list-style: none;
             li{
+              .glyphicon{
+                color: #bcbcbc;
+                font-size: .6em;
+                vertical-align: 1px;
+                margin: 0 5px 0 0;
+              }
                 -webkit-transition: all .2s ease-in-out;
                 -moz-transition: all .2s ease-in-out;
                 -o-transition: all .2s ease-in-out;
@@ -77,6 +97,12 @@ $dark-gray: rgb(123, 123, 123);
         width: 250px;
         padding: 10px 0px;
 
+        .slider{
+          width: 215px;
+          font-size: 0.9em;
+          margin: 10px 0 20px 10px;
+        }
+
         #notification-square {
             background-color: $background-color-box;
             position: relative;
@@ -85,6 +111,14 @@ $dark-gray: rgb(123, 123, 123);
             display: inline-block;
             margin-bottom: 10px;
             margin-left: 10px;
+          transition: all 1s linear;
+            .text-notification{
+
+              color: $dark-gray;
+              position: absolute;
+              top: 10px;
+              left: 15px;
+            }
             .ball-l, .ball-r {
                 display: block;
                 position: absolute;
@@ -102,13 +136,6 @@ $dark-gray: rgb(123, 123, 123);
                 background-color: lightgray;
                 right: 50%;
             }
-
-            &.gesture {
-                //background-color: $green-leap;
-                .ball {
-                    //background-color: red;
-                }
-            }
         }
         #info {
             background: {
@@ -121,19 +148,7 @@ $dark-gray: rgb(123, 123, 123);
             margin-left: 10px;
             padding: 10px;
         }
-
-        .square3d {
-            background: {
-                color: $background-color-box;
-            }
-            display: inline-block;
-            width: 100px;
-            height: 100px;
-            margin: 0 0 10px 10px;
-
-        }
     }
-
     #deb-stats {
         color: #b4b4b4; // Color text
         width: 100%;
