--- a/app/assets/scss/framework/_main.scss
+++ b/app/assets/scss/framework/_main.scss
@@ -1,6 +1,7 @@
 $green-leap: #B3CE24;
 $background-color-box: rgba(200, 200, 200, 0.5);
-$blue: #008CBA;
+$blue: rgba(0, 140, 186, 1);
+$blue-trans: rgba(0, 102, 135, 0.8);
 $green: rgba(39, 174, 97, 0.9);
 $dark-gray: rgb(123, 123, 123);
 
