Add config settings to Local storage

--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -11,6 +11,10 @@
  * ---------------------
  */
 
+/* Compass- Default fall-backs and external files.
+========================================================================== */
+@import "compass/css3";
+
 /* VENDOR - Default fall-backs and external files.
 ========================================================================== */
 //@import '../../assets/js/bower_components/bootstrap/dist/css/bootstrap.min.css';
@@ -38,3 +42,4 @@
 @import 'framework/modules/paint';
 @import 'framework/modules/tabs';
 @import 'framework/modules/slider';
+@import 'framework/modules/radiobuttons';
